update screen rc and hosts file

--- a/topologies/training-level-path-finder/files/.screenrc
+++ b/topologies/training-level-path-finder/files/.screenrc
@@ -8,12 +8,51 @@ term screen-256color
 # New screens for various processes.
 # Example: screen -t <hostname> <screen number> <command>
 # screen -t 7050SX-128 0 ssh aristaadmin@192.100.37.128
-screen -t CVP 1 ssh 192.168.0.5
-screen -t Spine1 2 ssh 192.168.0.11
-screen -t Spine2 3 ssh 192.168.0.12
-screen -t Leaf1 4 ssh 192.168.0.21
-screen -t Leaf2 5 ssh 192.168.0.22
-screen -t Leaf3 6 ssh 192.168.0.23
-screen -t Leaf4 7 ssh 192.168.0.24
-screen -t Host1 8 ssh 192.168.0.51
-screen -t Host2 9 ssh 192.168.0.52
+screen -t RR1 1 ssh 192.168.0.71
+screen -t RR2 2 ssh 192.168.0.72
+screen -t P10 3 ssh 192.168.0.51
+screen -t P11 4 ssh 192.168.0.52
+screen -t PE1 5 ssh 192.168.0.94
+screen -t ISP-1 6 ssh 192.168.0.16
+screen -t Edge10 7 ssh 192.168.0.10
+screen -t Edge11 8 ssh 192.168.0.11
+screen -t Edge12 9 ssh 192.168.0.12
+screen -t Edge13 10 ssh 192.168.0.13
+screen -t Edge14 11 ssh 192.168.0.14
+screen -t Leaf11 12 ssh 192.168.0.31
+screen -t Leaf12 13 ssh 192.168.0.32
+screen -t RR3 14 ssh 192.168.0.76
+screen -t RR4 15 ssh 192.168.0.77
+screen -t P20 16 ssh 192.168.0.53
+screen -t P21 17 ssh 192.168.0.54
+screen -t PE2 18 ssh 192.168.0.25
+screen -t ISP-2 19 ssh 192.168.0.26
+screen -t Edge20 20 ssh 192.168.0.20
+screen -t Edge21 21 ssh 192.168.0.21
+screen -t Edge22 22 ssh 192.168.0.22
+screen -t Edge23 23 ssh 192.168.0.23
+screen -t Edge24 24 ssh 192.168.0.24
+screen -t Leaf21 25 ssh 192.168.0.33
+screen -t Leaf22 26 ssh 192.168.0.34
+screen -t ISP-3 27 ssh 192.168.0.75
+screen -t RR5 28 ssh 192.168.0.73
+screen -t RR6 29 ssh 192.168.0.76
+screen -t RR 30 ssh 192.168.0.93
+screen -t P1 31 ssh 192.168.0.91
+screen -t P2 32 ssh 192.168.0.92
+screen -t PE11 33 ssh 192.168.0.94
+screen -t PE12 34 ssh 192.168.0.96
+screen -t PE21 35 ssh 192.168.0.95
+screen -t PE22 36 ssh 192.168.0.97
+screen -t R1-P11 37 ssh 192.168.0.81
+screen -t R1-P12 38 ssh 192.168.0.82
+screen -t R2-P31 39 ssh 192.168.0.83
+screen -t R2-P32 40 ssh 192.168.0.84
+screen -t H11 41 ssh 192.168.0.41
+screen -t H12 42 ssh 192.168.0.42
+screen -t H13 43 ssh 192.168.0.43
+screen -t H14 44 ssh 192.168.0.44
+screen -t H21 45 ssh 192.168.0.45
+screen -t H22 46 ssh 192.168.0.46
+screen -t H23 47 ssh 192.168.0.47
+screen -t H24 48 ssh 192.168.0.48
