--- a/topologies/training-level-path-finder/topo_build.yml
+++ b/topologies/training-level-path-finder/topo_build.yml
@@ -44,7 +44,7 @@ nodes:
           neighborPort: Ethernet1
           port: Ethernet2
         - neighborDevice: ISP-1
-          neighborPort: Ethernet4
+          neighborPort: Ethernet1
           port: Ethernet3
         - neighborDevice: R1-P11
           neighborPort: Ethernet4
@@ -561,8 +561,8 @@ nodes:
         - neighborDevice: RR
           neighborPort: Ethernet11
           port: Ethernet5
-        - neighborDevice: RR6
-          neighborPort: Ethernet1
+        - neighborDevice: R1-P11
+          neighborPort: Ethernet6
           port: Ethernet6
         - neighborDevice: R1-P12
           neighborPort: Ethernet6
@@ -685,27 +685,24 @@ nodes:
       sys_mac: 00:1c:73:34:c6:01
       platform: veos
       neighbors:
-        - neighborDevice: P1
+        - neighborDevice: P10
           neighborPort: Ethernet2
           port: Ethernet1
-        - neighborDevice: R1-P11
+        - neighborDevice: ISP-1
           neighborPort: Ethernet2
           port: Ethernet2
-        - neighborDevice: R1-P12
+        - neighborDevice: PE1
           neighborPort: Ethernet2
           port: Ethernet3
-        - neighborDevice: P2
-          neighborPort: Ethernet4
+        - neighborDevice: R1-P11
+          neighborPort: Ethernet5
           port: Ethernet4
-        - neighborDevice: RR5
-          neighborPort: Ethernet4
+        - neighborDevice: R1-P12
+          neighborPort: Ethernet5
           port: Ethernet5
-        - neighborDevice: RR6
-          neighborPort: Ethernet3
+        - neighborDevice: ISP-3
+          neighborPort: Ethernet2
           port: Ethernet6
-        - neighborDevice: RR
-          neighborPort: Ethernet4
-          port: Ethernet7
  - PE12:
       ip_addr: 192.168.0.96
       sys_mac: 00:1c:73:36:c6:01
