--- a/topologies/training-level-path-finder/topo_build.yml
+++ b/topologies/training-level-path-finder/topo_build.yml
@@ -642,7 +642,7 @@ nodes:
         - neighborDevice: P2
           neighborPort: Ethernet1
           port: Ethernet1
-        - neighborDevice: P11
+        - neighborDevice: PE11
           neighborPort: Ethernet1
           port: Ethernet2
         - neighborDevice: PE21
