--- a/topologies/training-level-path-finder/files/cvp/cvp_info.yaml
+++ b/topologies/training-level-path-finder/files/cvp/cvp_info.yaml
@@ -112,7 +112,7 @@ cvp_info:
       H21: 
         - H21-BASE
       H22: 
-        - H22-BASEtxt
+        - H22-BASE
       H23:  
         - H23-BASE
       H24:  
