--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2683,3 +2683,42 @@ topologies:
     access: standard
     disable_links: [jenkins, lab_grading]
     labguides: self
+  training-level-path-finder:
+    dev:
+      veos:
+        cpu: 128
+        ram: 512
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 128
+              ram: 512
+            branch: nested/2023.2
+            orderable: true
+            image: base-veos-training-path-finder-2023-2-4321-20240708
+            eos:
+              - 4.32.1F
+    prod:
+      veos:
+        cpu: 128
+        ram: 512
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 128
+              ram: 512
+            branch: v2023.2-0528024
+            orderable: false
+            image: base-veos-training-path-finder-2023-2-4321-20240708
+            eos:
+              - 4.32.1F
+    machine_type: n2-standard-128  
+    desc: 'Training Lab Pathfinder. For use by the Arista Training Team.'
+    name: 'Training Lab Pathfinder'
+    title: 'Training Lab Pathfinder'
+    disk_size: 600
+    access: standard
+    disable_links: [jenkins, lab_grading]
+    labguides: self
