--- a/nested-labvm/atd-docker/login/Dockerfile
+++ b/nested-labvm/atd-docker/login/Dockerfile
@@ -47,6 +47,10 @@ COPY src/qa-steps.py /usr/local/bin
 
 COPY src/uploadRunningConfigs.py /usr/local/bin
 
+COPY src/update-token.py /usr/local/bin
+
+RUN chmod +x /usr/local/bin/update-token.py
+
 RUN chmod +x /usr/local/bin/lab_status.py
 
 RUN chmod +x /usr/local/bin/login.py
