--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2700,6 +2700,23 @@ topologies:
             image: base-veos-training-path-finder-2023-2-4321-20240708
             eos:
               - 4.32.1F
+          2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 48
+              ram: 110
+              disk: 600
+              image: atd-training-level-path-finder-c2023-2-1-dual-ceos-20240716-eos
+            resources_cvp:
+              cpu: 48
+              ram: 110
+              disk: 100
+              image: dual-topo-training-level-7-cvp
+            branch: nested/2023.2-dual
+            image: atd-training-level-path-finder-c2023-2-1-dual-ceos-20240716-cvp
+            orderable: true
+            eos:
+              - 4.30.1F     
     prod:
       veos:
         cpu: 128
