--- a/topologies/training-level-path-finder/topo_build.yml
+++ b/topologies/training-level-path-finder/topo_build.yml
@@ -568,7 +568,7 @@ nodes:
  - RR5:
       ip_addr: 192.168.0.73
       sys_mac: 00:1c:73:13:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: ISP-3
           neighborPort: Ethernet5
@@ -612,7 +612,7 @@ nodes:
  - RR6:
       ip_addr: 192.168.0.74
       sys_mac: 00:1c:73:14:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: ISP-3
           neighborPort: Ethernet6
