--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1718,7 +1718,7 @@ topologies:
     title: 'Training Level 7 - Part 3 Lab'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins,lab_status, lab_grading]
+    disable_links: [jenkins, lab_status, lab_grading]
     labguides: self
   training-level-1-3-container-labs:
     dev:
