--- a/topologies/training-level-path-finder/topo_build.yml
+++ b/topologies/training-level-path-finder/topo_build.yml
@@ -18,6 +18,9 @@ nodes:
         - neighborDevice: ISP-1
           neighborPort: Ethernet3
           port: Ethernet3
+        - neighborDevice: RR
+          neighborPort: Ethernet17
+          port: Ethernet4
  - RR2:
       ip_addr: 192.168.0.72
       sys_mac: 00:1c:73:12:c6:01
@@ -32,6 +35,9 @@ nodes:
         - neighborDevice: ISP-1
           neighborPort: Ethernet4
           port: Ethernet3
+        - neighborDevice: RR
+          neighborPort: Ethernet18
+          port: Ethernet4
  - P10:
       ip_addr: 192.168.0.51
       sys_mac: 00:1c:73:f1:c6:01
@@ -58,6 +64,9 @@ nodes:
         - neighborDevice: Edge14
           neighborPort: Ethernet4
           port: Ethernet7
+        - neighborDevice: RR
+          neighborPort: Ethernet13
+          port: Ethernet8
  - P11:
       ip_addr: 192.168.0.52
       sys_mac: 00:1c:73:f2:c6:01
@@ -84,6 +93,9 @@ nodes:
         - neighborDevice: Edge14
           neighborPort: Ethernet5
           port: Ethernet7
+        - neighborDevice: RR
+          neighborPort: Ethernet14
+          port: Ethernet8
  - R1-PE1:
       ip_addr: 192.168.0.15
       sys_mac: 00:1c:73:b5:c6:01
@@ -119,7 +131,7 @@ nodes:
  - ISP-1:
       ip_addr: 192.168.0.16
       sys_mac: 00:1c:73:b6:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: P10
           neighborPort: Ethernet3
@@ -147,7 +159,10 @@ nodes:
           port: Ethernet8
         - neighborDevice: Edge14
           neighborPort: Ethernet3
-          port: Ethernet9        
+          port: Ethernet9
+        - neighborDevice: ISP-3
+          neighborPort: Ethernet7
+          port: Ethernet10
  - Edge10:
       ip_addr: 192.168.0.10
       sys_mac: 00:1c:73:b0:c6:01
@@ -287,6 +302,9 @@ nodes:
         - neighborDevice: ISP-2
           neighborPort: Ethernet3
           port: Ethernet3
+        - neighborDevice: RR
+          neighborPort: Ethernet19
+          port: Ethernet4
  - RR4:
       ip_addr: 192.168.0.77
       sys_mac: 00:1c:73:17:c6:01
@@ -301,6 +319,9 @@ nodes:
         - neighborDevice: ISP-2
           neighborPort: Ethernet4
           port: Ethernet3
+        - neighborDevice: RR
+          neighborPort: Ethernet20
+          port: Ethernet4
  - P20:
       ip_addr: 192.168.0.53
       sys_mac: 00:1c:73:f3:c6:01
@@ -327,6 +348,9 @@ nodes:
         - neighborDevice: Edge24
           neighborPort: Ethernet4
           port: Ethernet7
+        - neighborDevice: RR
+          neighborPort: Ethernet15
+          port: Ethernet8
  - P21:
       ip_addr: 192.168.0.54
       sys_mac: 00:1c:73:f4:c6:01
@@ -353,10 +377,13 @@ nodes:
         - neighborDevice: Edge24
           neighborPort: Ethernet5
           port: Ethernet7
+        - neighborDevice: RR
+          neighborPort: Ethernet16
+          port: Ethernet8
  - R2-PE2:
       ip_addr: 192.168.0.25
       sys_mac: 00:1c:73:c5:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: P20
           neighborPort: Ethernet2
@@ -388,7 +415,7 @@ nodes:
  - ISP-2:
       ip_addr: 192.168.0.26
       sys_mac: 00:1c:73:c6:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: P20
           neighborPort: Ethernet3
@@ -416,7 +443,10 @@ nodes:
           port: Ethernet8
         - neighborDevice: Edge24
           neighborPort: Ethernet3
-          port: Ethernet9        
+          port: Ethernet9
+        - neighborDevice: ISP-3
+          neighborPort: Ethernet8
+          port: Ethernet10
  - Edge20:
       ip_addr: 192.168.0.20
       sys_mac: 00:1c:73:c0:c6:01
@@ -565,10 +595,16 @@ nodes:
         - neighborDevice: RR6
           neighborPort: Ethernet1
           port: Ethernet6
+        - neighborDevice: ISP-1
+          neighborPort: Ethernet10
+          port: Ethernet7
+        - neighborDevice: ISP-2
+          neighborPort: Ethernet10
+          port: Ethernet8
  - RR5:
       ip_addr: 192.168.0.73
       sys_mac: 00:1c:73:13:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: ISP-3
           neighborPort: Ethernet5
@@ -612,7 +648,7 @@ nodes:
  - RR6:
       ip_addr: 192.168.0.74
       sys_mac: 00:1c:73:14:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: ISP-3
           neighborPort: Ethernet6
@@ -694,6 +730,30 @@ nodes:
         - neighborDevice: RR6
           neighborPort: Ethernet5
           port: Ethernet12
+        - neighborDevice: P10
+          neighborPort: Ethernet8
+          port: Ethernet13
+        - neighborDevice: P11
+          neighborPort: Ethernet8
+          port: Ethernet14
+        - neighborDevice: P20
+          neighborPort: Ethernet8
+          port: Ethernet15
+        - neighborDevice: P21
+          neighborPort: Ethernet8
+          port: Ethernet16
+        - neighborDevice: RR1
+          neighborPort: Ethernet4
+          port: Ethernet17
+        - neighborDevice: RR2
+          neighborPort: Ethernet4
+          port: Ethernet18
+        - neighborDevice: RR3
+          neighborPort: Ethernet4
+          port: Ethernet19
+        - neighborDevice: RR4
+          neighborPort: Ethernet4
+          port: Ethernet20
  - P5:
       ip_addr: 192.168.0.91
       sys_mac: 00:1c:73:31:c6:01
@@ -859,7 +919,7 @@ nodes:
  - PE1:
       ip_addr: 192.168.0.81
       sys_mac: 00:1c:73:21:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: PE2
           neighborPort: Ethernet1
@@ -888,7 +948,7 @@ nodes:
  - PE2:
       ip_addr: 192.168.0.82
       sys_mac: 00:1c:73:22:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: PE1
           neighborPort: Ethernet1
@@ -917,7 +977,7 @@ nodes:
  - PE3:
       ip_addr: 192.168.0.83
       sys_mac: 00:1c:73:23:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: PE4
           neighborPort: Ethernet1
@@ -946,7 +1006,7 @@ nodes:
  - PE4:
       ip_addr: 192.168.0.84
       sys_mac: 00:1c:73:24:c6:01
-      platform: cloudeos
+      platform: veos
       neighbors:
         - neighborDevice: PE3
           neighborPort: Ethernet1
